@@ -2,7 +2,10 @@
 
 	* src/gerbv.c: Robustified if someone tries to parse RS274D.
 	  Happend to fix bug #639127.
-	* doc/PNG-print: Added doc on how to print PNGs generated by gerbv.
+	* doc/PNG-print/*: Added doc on how to print PNGs generated by gerbv.
+	* src/gerbv.c: Added explicit setting of scale. Good when generating
+	  PNGs for printing. Both patch and above doc is thanks to 
+	  Dino Ghilardi.
 
 2002-11-15  Andreas Andersson  <e92_aan@e.kth.se>
 
